app changes. Need to get data from divs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h3>Custom Features</h3>
 
       <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p ondragstart="dragStart(event)" draggable="true" id="intrusion prevention system" style="cursor:pointer;" title="An intrusion prevention system (IPS) is a system that monitors a network for malicious activities.">IPS</p>
+        <p ondragstart="dragStart(event)" draggable="true" id="ips" style="cursor:pointer;" title="An intrusion prevention system (IPS) is a system that monitors a network for malicious activities." value="99.99">IPS</p>
       </div>
 
       <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
