still not working app

--- a/index.html
+++ b/index.html
@@ -15,26 +15,16 @@
       <h3>Tier 1 Basics</h3>
 
         <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-          <p class="par1" ondragstart="dragStart(event)" draggable="true" id="p7">g2.1 GB</p>
+          <p class="par1" ondragstart="dragStart(event)" draggable="true" id="cpu">g2.1 GB</p>
         </div>
 
         <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-          <p ondragstart="dragStart(event)" draggable="true" id="p6">Firewall</p>
+          <p ondragstart="dragStart(event)" draggable="true" id="fw">Firewall</p>
         </div>
 
         <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-          <p ondragstart="dragStart(event)" draggable="true" id="p8">Encrypted At Rest</p>
+          <p ondragstart="dragStart(event)" draggable="true" id="ear">Encrypted At Rest</p>
         </div>
-
-        <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
-        <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
-        <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
-        <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
-        <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
         <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
@@ -47,30 +37,8 @@
       <h3>Custom Features</h3>
 
       <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p ondragstart="dragStart(event)" draggable="true" id="ips" style="cursor:pointer;" title="An intrusion prevention system (IPS) is a system that monitors a network for malicious activities." value="99.99">IPS</p>
+        <p ondragstart="dragStart(event)" draggable="true" id="100" style="cursor:pointer;" title="IPS">IPS</p>
       </div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p ondragstart="dragStart(event)" draggable="true" id="multi-factor">Multi-Factor</p>
-      </div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p ondragstart="dragStart(event)" draggable="true" id="management">Management</p>
-      </div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p ondragstart="dragStart(event)" draggable="true" id="p4">Snapshot</p>
-      </div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p ondragstart="dragStart(event)" draggable="true" id="p5">BAA</p>
-      </div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
-      <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
       <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
@@ -80,10 +48,6 @@
 
       <h3>HIPAA READY</h3>
       <div id="ips"></div>
-      <div id="mult"></div>
-      <div id="mana"></div>
-      <div id="snap"></div>
-      <div id="baa"></div>
 
     </div><!-- end of col 3 -->
 
