still not working

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
         <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
+        <div class="droptarget empty" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+
         <br />
         <button type="button" value="Refresh Page" onClick="window.location.reload()">Start Over</button>
 
