file structure with js and css folders

--- a/example.html
+++ b/example.html
@@ -3,53 +3,9 @@
 <title>Examples of using the ondrag Global Event Attribute</title>
 <head>
 <meta content="width=device-width">
-<style>
-  div {
-    margin: 0em;
-    padding: 2em;
-  }
-  #source {
-    color: blue;
-    border: 1px solid black;
-  }
-  #target {
-    border: 1px solid black;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="css/style2.css">
+<script src="js/app2.js"></script>
 </head>
-<script>
-var total = 0;
-
-function drag_handler(ev) {
- console.log("Drag");
-}
-
-function dragstart_handler(ev) {
- console.log("dragStart");
- ev.dataTransfer.setData("text", ev.target.id);
-}
-
-function drop_handler(ev) {
- console.log("Drop");
- total+5;
- ev.currentTarget.style.background = "lightyellow";
-totalVal()
- ev.preventDefault();
- var data = ev.dataTransfer.getData("text");
- ev.target.appendChild(document.getElementById(data));
-}
-
-function totalVal() {
-  if (total >= 0) {
-    document.getElementById("totals").innerHTML=total;
-  }
-}
-
-function dragover_handler(ev) {
- console.log("dragOver");
- ev.preventDefault();
-}
-</script>
 <body>
 <h1>Examples of <code>ondrag</code>, <code>ondrop</code>, <code>ondragstart</code>, <code>ondragover</code></h1>
  <div class="source">
